<resources>
    <string name="app_name">Battery Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="status">Status:</string>
    <string name="plugged">Plugged:</string>
    <string name="level">Level:</string>
    <string name="health">Health:</string>
    <string name="technology">Technology:</string>
    <string name="temperature">Temperature:</string>
    <string name="voltage">Voltage:</string>
    <string name="model">Model:</string>
    <string name="android_version">Android version:</string>
    <string name="build_id">Build ID:</string>
    <string name="confirm_title">Rate Battery Satus</string>
    <string name="confirm_message">If you enjoy using this app please take a moment to rate it. Thanks for your support!</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="rate_now">RATE NOW</string>
    <string name="capacity">Capacity:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>